# hw4_Computing_DSDM_Campos-Gutierrez

./: README.md  hw4.py  pyproject.toml
notebooks/: load_data.ipynb  test.ipynb
src/diabetes_mellitus.egg-info/: PKG-INFO  SOURCES.txt
src/diabetes_mellitus/load_clean_data/: binary_encoding_gender.py
src/diabetesmellitus/load_clean_data/: __init__.py  fill_nan_mean.py  generate_dummies.py  load_data.py  remove_nan.py  updated_train_test_split.py
src/diabetesmellitus/metrics/: updated_roc_auc_score.py
src/diabetesmellitus/train_model/: fit_model.py
src/hw4_computing_dsdm_campos_gutierrez.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
