[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw4-computing-dsdm-campos-gutierrez"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datetime>=5.5",
    "geopy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["diabetes_mellitus*"]
